# water_pouring_problem

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
python/: water.py
src/: utils.h  water.cpp
